--- a/package.json
+++ b/package.json
@@ -1,33 +1,8 @@
 {
-  "name": "minerva",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "quality": "pnpm run lint && pnpm run tsc && pnpm run test",
-    "lint": "eslint .",
-    "tsc": "vue-tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "eslint": "^9.24.0",
-    "eslint-plugin-vue": "^10.0.0",
-    "globals": "^16.0.0",
-    "path": "^0.12.7",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0",
-    "url": "^0.11.4",
-    "vite": "^6.2.5",
-    "vue": "^3.5.13",
-    "vue-tsc": "^2.2.8"
-  }
+"devDependencies": {
+	"typescript": "^5.8.3",
+	"vitest": "3.1.1",
+	"eslint": "^9.24.0",
+	"@types/node": "^22.14.0"
+	}
 }
