--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,16 @@
     "tsc": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/ui": "^3.1.1",
-    "eslint-plugin-vue": "^10.0.0",
-    "jsdom": "^26.0.0",
-    "vite": "^6.2.5",
-    "vitest": "^3.1.1",
     "@vue/test-utils": "2.4.6",
+    "jsdom": "^26.0.0",
+    "vitest": "^3.1.1",
     "vue-tsc": "^2.2.8"
   }
 }
