--- a/server/package.json
+++ b/server/package.json
@@ -5,24 +5,21 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch ./ --ext ts --exec ts-node index.ts",
+    "dev": "nodemon --watch ./ --ext ts --exec tsx index.ts",
     "lint": "eslint .",
-    "start": "node dist/index.js",
     "test": "vitest --run",
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "express": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/pg": "^8.11.11",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^5.1.0",
-    "nodemon": "^3.1.9",
-    "pkg": "^5.8.1",
-    "ts-node": "^10.9.2"
+    "pkg": "^5.8.1"
   }
 }
