--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
 	"type": "module",
 	"scripts": {
   		"dev": "docker compose -f docker-compose.dev.yml up --build",
-  		"prod": "docker compose -f docker-compose.prod.yml up --build"
+  		"prod": "docker compose -f docker-compose.prod.yml up --build",
+		"prisma": "docker compose -f docker-compose.dev.yml exec prisma npx --yes prisma",
+		"migrate": "pnpm prisma migrate dev --schema=server/prisma/schema.prisma  --skip-generate",
+		"reset": "pnpm prisma migrate reset --schema=server/prisma/schema.prisma --skip-generate",
+		"studio": "pnpm prisma studio --schema=server/prisma/schema.prisma"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.24.0",
