Add quality check to pipeline.

--- a/.github/publish.yml
+++ b/.github/publish.yml
@@ -1,11 +1,37 @@
-name: Build and Push
+name: CI Pipeline
 
 on:
   push:
-    branches: [master]
 
 jobs:
-  build:
+  quality:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.11.0
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Run Lint
+        run: pnpm -r lint
+
+      - name: Run Tests
+        run: pnpm -r test
+
+      - name: Run Type Check
+        run: pnpm -r tsc
+
+  build-and-push:
+    needs: quality
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
