--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"type": "module",
 	"scripts": {
   		"dev": "docker compose -f docker-compose.dev.yml up --build",
-  		"prod": "docker compose -f docker-compose.prod.yml up --build"
+  		"prod": "docker compose -f docker-compose.prod.yml up --build",
+		"test": "pnpm -r test"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.24.0",
