--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -62,6 +62,7 @@ services:
       POSTGRES_DB: minerva
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./postgres-init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
   pgdata:
