--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,4 +1,11 @@
 services:
-  server:
-    env_file:
-      - .env.test.local
+  postgres:
+    image: postgres:17.4
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: minerva_test
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./postgres-init-test.sql:/docker-entrypoint-initdb.d/init.sql
