--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "tsc": "tsc --noEmit",
     "test": "vitest run",
     "prisma": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma",
-    "generate": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma generate --schema=./server/prisma/schema.prisma",
+    "generate": "npx prisma generate --schema=./prisma/schema.prisma",
     "migrate": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma migrate dev --schema=./server/prisma/schema.prisma",
     "reset": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma migrate reset --schema=./server/prisma/schema.prisma",
     "studio": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma studio --schema=./server/prisma/schema.prisma"
