--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
         run: pnpm -r test
 
       - name: Generate Prisma Client
-        run: pnpm --filter server generate
+        run: pnpm --filter server generate:ci
 
       - name: Run Type Check
         run: pnpm -r tsc
