--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,14 +20,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Run Prisma Generate
+        run: pnpm --filter server prisma:generate:ci
+
       - name: Run Lint
         run: pnpm -r lint
 
       - name: Run Tests
         run: pnpm -r test
-
-      - name: Generate Prisma Client
-        run: pnpm --filter server generate:ci
 
       - name: Run Type Check
         run: pnpm -r tsc
