--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "tsc": "tsc --noEmit",
     "test": "vitest run",
     "prisma:generate": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma generate --schema=./prisma/schema.prisma",
+    "prisma:generate:ci": "npx prisma generate --schema=./prisma/schema.prisma",
     "prisma:migrate": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma migrate dev --schema=./prisma/schema.prisma",
     "prisma:migrate:ci": "prisma migrate deploy",
     "prisma:reset": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma migrate reset --schema=./prisma/schema.prisma",
