--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
+    "composite": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
       "#/*": ["types/*"]
     }
   },
-  "include": ["src", "types"]
+  "include": ["src", "types"],
+  "references": [{ "path": "../server" }]
 }
