--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - "8080:5173"
     volumes:
+      - ./client:/app/client
       - /app/client/node_modules
     environment:
       - VITE_API_BASE=/api
@@ -23,6 +24,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
+      - ./server:/app/server
       - /app/server/node_modules
     env_file:
       - .env
