--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
 	"type": "module",
 	"scripts": {
   		"dev": "docker compose -f docker-compose.dev.yml up --build",
-  		"prod": "docker compose -f docker-compose.prod.yml up --build"
+  		"prod": "docker compose -f docker-compose.prod.yml up --build",
+		"test": "pnpm -r test",
+		"lint": "pnpm -r lint",
+		"tsc": "pnpm -r tsc",
+		"quality": "pnpm test && pnpm lint && pnpm tsc"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.24.0",
