--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,13 +3,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    working_dir: /app/client
+    working_dir: /app/packages/client
     command: pnpm dev
     ports:
       - "8080:5173"
     volumes:
-      - ./client:/app/client
-      - /app/client/node_modules
+      - ./packages/client:/app/packages/client
+      - /app/packages/client/node_modules
     environment:
       - VITE_API_BASE=/api
     depends_on:
@@ -19,13 +19,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    working_dir: /app/server
+    working_dir: /app/packages/server
     command: pnpm dev
     ports:
       - "3000:3000"
     volumes:
-      - ./server:/app/server
-      - /app/server/node_modules
+      - ./packages/server:/app/packages/server
+      - /app/packages/server/node_modules
     env_file:
       - .env
     environment:
