--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "dev": "nodemon --watch ./ --ext ts --exec tsx index.ts",
-    "lint": "eslint .",
-    "tsc": "tsc --noEmit",
+            "build": "../../node_modules/.bin/tsc --build ../../tsconfig.build.json",
+    "dev": "../../node_modules/.bin/nodemon --watch ./ --ext ts --exec ../../node_modules/.bin/tsx index.ts",
+    "lint": "../../node_modules/.bin/eslint .",
+    "tsc": "echo 'TypeScript checking is handled from the root workspace'",
     "test": "vitest run",
     "prisma:generate": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma generate --schema=./prisma/schema.prisma",
     "prisma:generate:ci": "npx prisma generate --schema=./prisma/schema.prisma",
