--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,24 +4,24 @@ RUN corepack enable && corepack prepare pnpm@9.15.4 --activate
 
 # Create base directories
 WORKDIR /app
-RUN mkdir -p /app/client /app/server
+RUN mkdir -p /app/packages/client /app/packages/server
 
 # Copy root package files
 COPY pnpm-lock.yaml pnpm-workspace.yaml package.json ./
 
 # Copy client files
-COPY client/package.json /app/client/
-COPY client/vite.config.ts /app/client/
-COPY client/index.html /app/client/
-COPY client/src /app/client/src/
-COPY client/tsconfig.json /app/client/
+COPY packages/client/package.json /app/packages/client/
+COPY packages/client/vite.config.ts /app/packages/client/
+COPY packages/client/index.html /app/packages/client/
+COPY packages/client/src /app/packages/client/src/
+COPY packages/client/tsconfig.json /app/packages/client/
 
 # Copy server files
-COPY server/package.json /app/server/
-COPY server/prisma /app/server/prisma/
-COPY server/src /app/server/src/
-COPY server/tsconfig.json /app/server/
-COPY server/index.ts /app/server/
+COPY packages/server/package.json /app/packages/server/
+COPY packages/server/prisma /app/packages/server/prisma/
+COPY packages/server/src /app/packages/server/src/
+COPY packages/server/tsconfig.json /app/packages/server/
+COPY packages/server/index.ts /app/packages/server/
 
 # Copy shared configuration
 COPY tsconfig.base.json /app/
@@ -30,4 +30,4 @@ COPY tsconfig.base.json /app/
 RUN pnpm install --shamefully-hoist
 
 # Generate Prisma client
-RUN cd /app/server && npx prisma generate --schema=./prisma/schema.prisma
+RUN cd /app/packages/server && npx prisma generate --schema=./prisma/schema.prisma
