--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
-    "lint": "eslint .",
+    "lint": "../../node_modules/.bin/eslint .",
     "test": "vitest --run",
     "tsc": "vue-tsc --noEmit"
   },
