--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,24 @@
 {
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "noEmit": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "composite": true,
+    "incremental": true,
+    "tsBuildInfoFile": "./dist/.tsbuildinfo"
+  },
   "files": [],
   "references": [
-    { "path": "./client" },
-    { "path": "./server" }
+    { "path": "./packages/client" },
+    { "path": "./packages/server" }
   ]
 }
