--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
 	"name": "minerva",
 	"private": true,
 	"type": "module",
-	    "scripts": {
+	"engines": {
+		"node": ">=24.4.1",
+		"pnpm": ">=9.0.0"
+	},
+	"scripts": {
         "dev": "docker compose -f docker-compose.dev.yml up --build",
         "prod": "docker compose -f docker-compose.prod.yml up --build",
         "test": "pnpm -r test",
@@ -16,7 +20,7 @@
     },
 	"devDependencies": {
 		"@eslint/js": "^9.24.0",
-		"@types/node": "^22.14.0",
+		"@types/node": "^24.4.1",
 		"@typescript-eslint/eslint-plugin": "^8.29.1",
 		"@typescript-eslint/parser": "^8.29.1",
 		"eslint": "^9.24.0",
