--- a/package.json
+++ b/package.json
@@ -20,17 +20,13 @@
     },
 	"devDependencies": {
 		"@eslint/js": "^9.24.0",
-		"@types/node": "^24.4.1",
+		"@types/node": "^24.2.1",
 		"@typescript-eslint/eslint-plugin": "^8.29.1",
 		"@typescript-eslint/parser": "^8.29.1",
 		"eslint": "^9.24.0",
 		"eslint-plugin-vue": "^10.0.0",
 		"globals": "^16.0.0",
-		"nodemon": "^3.1.9",
-		"tsx": "^4.19.3",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.29.1",
-		"vite": "^6.2.5",
-		"vitest": "3.1.1"
+		"typescript-eslint": "^8.29.1"
 	}
 }
