--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,6 +23,7 @@
     "@vitest/ui": "^3.1.1",
     "@vue/test-utils": "2.4.6",
     "jsdom": "^26.0.0",
+    "vite": "^6.2.5",
     "vitest": "^3.1.1",
     "vue-tsc": "^2.2.8"
   }
