--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,8 +28,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/pg": "^8.11.11",
+    "nodemon": "^3.1.9",
     "pkg": "^5.8.1",
     "tsx": "^4.19.3",
-    "vitest": "^1.3.1"
+    "vitest": "^3.1.1"
   }
 }
