--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 		"eslint": "^9.24.0",
 		"eslint-plugin-vue": "^10.0.0",
 		"globals": "^16.0.0",
+		"jsdom": "^26.0.0",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.29.1"
+		"typescript-eslint": "^8.29.1",
+		"vitest": "^3.1.1"
 	}
 }
