--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,7 @@
     "build": "vite build",
     "dev": "vite",
     "lint": "../../node_modules/.bin/eslint .",
-    "test": "vitest --run",
+    "test": "../../node_modules/.bin/vitest --run",
     "tsc": "vue-tsc --noEmit"
   },
   "dependencies": {
@@ -22,9 +22,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/ui": "^3.1.1",
     "@vue/test-utils": "2.4.6",
-    "jsdom": "^26.0.0",
     "vite": "^6.2.5",
-    "vitest": "^3.1.1",
     "vue-tsc": "^2.2.8"
   }
 }
