--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-            "build": "../../node_modules/.bin/tsc --build ../../tsconfig.build.json",
-    "dev": "../../node_modules/.bin/nodemon --watch ./ --ext ts --exec ../../node_modules/.bin/tsx index.ts",
+    "build": "../../node_modules/.bin/tsc --build ../../tsconfig.build.json",
+    "dev": "nodemon --watch ./ --ext ts --exec ../../node_modules/.bin/tsx index.ts",
     "lint": "../../node_modules/.bin/eslint .",
     "tsc": "echo 'TypeScript checking is handled from the root workspace'",
     "test": "../../node_modules/.bin/vitest run",
@@ -17,19 +17,19 @@
     "prisma:studio": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma studio --schema=./prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.13.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "pg": "^8.14.1",
-    "prisma": "^6.5.0"
+    "pg": "^8.16.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/pg": "^8.11.11",
-    "nodemon": "^3.1.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/pg": "^8.15.5",
+    "nodemon": "^3.1.10",
     "pkg": "^5.8.1",
-    "tsx": "^4.19.3"
+    "prisma": "^6.13.0",
+    "tsx": "^4.20.3"
   }
 }
