--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -26,8 +26,8 @@ COPY packages/server/index.ts /app/packages/server/
 # Copy shared configuration
 COPY tsconfig.json tsconfig.build.json /app/
 
-# Install dependencies
+# Install dependencies and build
 RUN pnpm install --shamefully-hoist
-
-# Generate Prisma client
 RUN cd /app/packages/server && npx prisma generate --schema=./prisma/schema.prisma
+RUN cd /app/packages/client && pnpm build
+RUN cd /app/packages/server && pnpm build
