--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "tsc": "tsc --build tsconfig.build.json",
         "quality": "pnpm test && pnpm lint && pnpm tsc",
         "clean": "rm -rf dist packages/*/dist packages/*/node_modules",
-        "build": "pnpm clean && pnpm install && pnpm -r build",
+        "build": "pnpm clean && pnpm install && cd packages/server && npx prisma generate --schema=./prisma/schema.prisma && cd ../.. && pnpm -r build",
         "dev:client": "cd packages/client && pnpm dev",
         "dev:server": "cd packages/server && pnpm dev"
     },
