--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "../../node_modules/.bin/tsc --build ../../tsconfig.build.json",
+    "build": "../../node_modules/.bin/tsc --project .",
     "dev": "nodemon --watch ./ --ext ts --exec ../../node_modules/.bin/tsx index.ts",
     "lint": "../../node_modules/.bin/eslint .",
     "tsc": "echo 'TypeScript checking is handled from the root workspace'",
@@ -28,7 +28,6 @@
     "@types/express": "^5.0.3",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
-    "pkg": "^5.8.1",
     "prisma": "^6.13.0",
     "tsx": "^4.20.3"
   }
