--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -5,5 +5,6 @@
     "outDir": "../../dist/server",
     "noEmit": false
   },
-  "include": ["./**/*.ts"]
+  "include": ["src/**/*.ts", "index.ts"],
+  "exclude": ["../client/**/*"]
 }
