--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,5 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "noEmit": false
-  }
+  },
+  "references": [
+    { "path": "./packages/client" },
+    { "path": "./packages/server" }
+  ]
 }
