--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -31,3 +31,6 @@ RUN pnpm install --shamefully-hoist
 RUN cd /app/packages/server && npx prisma generate --schema=./prisma/schema.prisma
 RUN cd /app/packages/client && pnpm build
 RUN cd /app/packages/server && pnpm build
+
+# Set default command to ensure correct working directory
+CMD ["sh", "-c", "cd /app/packages/server && pnpm prisma:migrate:ci && pnpm dev"]
