--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
 	"scripts": {
         "dev": "docker compose -f docker-compose.dev.yml up --build",
-
+        "start": "docker compose up --build",
         "test": "pnpm -r test",
         "lint": "pnpm -r lint",
         "tsc": "tsc --build tsconfig.build.json",
