--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"pnpm": ">=9.0.0"
 	},
 	"scripts": {
-        "dev": "docker compose -f docker-compose.dev.yml up --build",
+        "dev": "docker compose up --build",
         "start": "docker compose up --build",
         "test": "pnpm -r test",
         "lint": "pnpm -r lint",
@@ -28,7 +28,7 @@
 		"globals": "^16.3.0",
 		"jsdom": "^26.1.0",
 		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.39.0",
+		"typescript-eslint": "^8.8.0",
 		"vitest": "^3.2.4"
 	}
 }
