--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,14 +21,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "prisma": "^6.13.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
-    "prisma": "^6.13.0",
     "tsx": "^4.20.3"
   }
 }
