--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "../../node_modules/.bin/tsc --project .",
-    "dev": "nodemon --watch ./ --ext ts --exec ../../node_modules/.bin/tsx index.ts",
-    "lint": "../../node_modules/.bin/eslint .",
+    "build": "npx tsc --project .",
+    "dev": "nodemon --watch ./ --ext ts --exec tsx index.ts",
+    "lint": "npx eslint .",
     "tsc": "echo 'TypeScript checking is handled from the root workspace'",
-    "test": "../../node_modules/.bin/vitest run",
+    "test": "npx vitest run",
     "prisma:generate": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma generate --schema=./prisma/schema.prisma",
     "prisma:generate:ci": "npx prisma generate --schema=./prisma/schema.prisma",
     "prisma:migrate": "docker compose -f ../docker-compose.dev.yml exec prisma npx prisma migrate dev --schema=./prisma/schema.prisma",
