--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "naive-ui": "^2.42.0",
     "papaparse": "^5.5.3",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
