Update recipe view.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,5 +33,8 @@
     "supertest": "^7.1.4",
     "tsx": "^4.20.3",
     "vitest": "^3.2.4"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
