--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint:fix": "pnpm -r lint --fix",
         "tsc": "tsc --build tsconfig.build.json",
         "quality": "pnpm test && pnpm lint && pnpm tsc",
+        "db:seed": "pnpm --filter server exec prisma db seed",
         "clean": "rm -rf dist packages/*/dist packages/*/node_modules",
         "build": "pnpm clean && pnpm install && cd packages/server && npx prisma generate --schema=./prisma/schema.prisma && cd ../.. && pnpm -r build",
         "dev:client": "cd packages/client && pnpm dev",
