--- a/package.json
+++ b/package.json
@@ -7,30 +7,30 @@
 		"pnpm": ">=9.0.0"
 	},
 	"scripts": {
-        "dev": "docker compose up --build",
-        "start": "docker compose up --build",
-        "test": "pnpm -r test",
-        "lint": "pnpm -r lint",
+		"dev": "docker compose up --build",
+		"start": "docker compose up --build",
+		"test": "pnpm -r test",
+		"lint": "pnpm -r lint",
 		"lint:fix": "pnpm -r lint --fix",
-        "tsc": "tsc --build tsconfig.build.json",
-        "quality": "pnpm test && pnpm lint && pnpm tsc",
-        "db:seed": "pnpm --filter server exec prisma db seed",
-        "clean": "rm -rf dist packages/*/dist packages/*/node_modules",
-        "build": "pnpm clean && pnpm install && cd packages/server && npx prisma generate --schema=./prisma/schema.prisma && cd ../.. && pnpm -r build",
-        "dev:client": "cd packages/client && pnpm dev",
-        "dev:server": "cd packages/server && pnpm dev"
-    },
+		"tsc": "tsc --build tsconfig.build.json",
+		"quality": "pnpm test && pnpm lint && pnpm tsc",
+		"db:seed": "pnpm --filter server exec prisma db seed",
+		"clean": "rm -rf dist packages/*/dist packages/*/node_modules",
+        "build": "pnpm clean && pnpm install && pnpm --filter server run prisma:generate:ci && pnpm -r build",
+		"dev:client": "cd packages/client && pnpm dev",
+		"dev:server": "cd packages/server && pnpm dev"
+	},
 	"devDependencies": {
-		"@eslint/js": "^9.33.0",
-		"@types/node": "^24.2.1",
-		"@typescript-eslint/eslint-plugin": "^8.39.0",
-		"@typescript-eslint/parser": "^8.39.0",
-		"eslint": "^9.33.0",
-		"eslint-plugin-vue": "^10.4.0",
-		"globals": "^16.3.0",
-		"jsdom": "^26.1.0",
-		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.8.0",
+		"@eslint/js": "^9.39.1",
+		"@types/node": "^24.10.1",
+		"@typescript-eslint/eslint-plugin": "^8.48.0",
+		"@typescript-eslint/parser": "^8.48.0",
+		"eslint": "^9.39.1",
+		"eslint-plugin-vue": "^10.6.1",
+		"globals": "^16.5.0",
+		"jsdom": "^27.2.0",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.48.0",
 		"vitest": "^4.0.14"
 	}
 }
