--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/node": "^24.10.1",
 		"@typescript-eslint/eslint-plugin": "^8.48.0",
 		"@typescript-eslint/parser": "^8.48.0",
+		"@vue/compiler-dom": "^3.5.25",
 		"eslint": "^9.39.1",
 		"eslint-plugin-vue": "^10.6.1",
 		"globals": "^16.5.0",
