--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,12 +17,14 @@
     "prisma:studio": "docker compose -f ../docker-compose.dev.yml exec prisma pnpm prisma studio --schema=./prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^6.13.0",
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.1",
+    "@prisma/client-runtime-utils": "^7.0.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pg": "^8.16.3",
-    "prisma": "^6.13.0"
+    "prisma": "^7.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -33,8 +35,5 @@
     "supertest": "^7.1.4",
     "tsx": "^4.20.6",
     "vitest": "^4.0.14"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
   }
 }
