--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"quality": "pnpm test && pnpm lint && pnpm tsc",
 		"db:seed": "pnpm --filter server exec tsx prisma/seed.ts",
 		"clean": "rm -rf dist packages/*/dist packages/*/node_modules",
-        "build": "pnpm clean && pnpm install && pnpm --filter server run prisma:generate:ci && pnpm -r build",
+		"build": "pnpm clean && pnpm install && pnpm --filter server run prisma:generate:ci && pnpm -r build",
+		"test:prod": "docker compose -f docker-compose.prod.yml up --build",
+		"prod:down": "docker compose -f docker-compose.prod.yml down",
 		"dev:client": "cd packages/client && pnpm dev",
 		"dev:server": "cd packages/server && pnpm dev"
 	},
