--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,19 +22,19 @@
     "@prisma/client": "^7.0.1",
     "@prisma/client-runtime-utils": "^7.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pg": "^8.16.3",
-    "prisma": "^7.0.1"
+    "prisma": "^7.0.1",
+    "tsx": "^4.20.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.3",
+    "dotenv": "^17.2.3",
     "nodemon": "^3.1.11",
     "supertest": "^7.1.4",
-    "tsx": "^4.20.6",
     "vitest": "^4.0.14"
   }
 }
