--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,8 +18,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "pg": "^8.16.3",
-    "prisma": "^7.0.1",
-    "tsx": "^4.20.6"
+    "prisma": "^7.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -28,6 +27,7 @@
     "@types/supertest": "^6.0.3",
     "nodemon": "^3.1.11",
     "supertest": "^7.1.4",
+    "tsx": "^4.20.6",
     "vitest": "^4.0.14"
   }
 }
